--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -7,6 +7,9 @@ on:
     branches: [main]
     types: [opened, synchronize, reopened, ready_for_review]
 
+permissions:
+    contents: read
+
 defaults:
   run:
     shell: bash
@@ -20,15 +23,11 @@ jobs:
     - uses: actions/setup-go@v4
       with:
         go-version: '^1.21'
-        cache: false
 
     - name: golangci-lint
       uses: golangci/golangci-lint-action@v3
       with:
-        # Require: The version of golangci-lint to use.
-        # When `install-mode` is `binary` (default) the value can be v1.2 or v1.2.3 or `latest` to use the latest version.
-        # When `install-mode` is `goinstall` the value can be v1.2.3, `latest`, or the hash of a commit.
-        version: v1.54
+        version: v1.55
     
   test:
     runs-on: ubuntu-latest
