--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -28,6 +28,7 @@ jobs:
       uses: golangci/golangci-lint-action@v3
       with:
         version: v1.55
+        args: --timeout 5m
     
   test:
     runs-on: ubuntu-latest
