--- a/.github/workflows/temp.yml
+++ b/.github/workflows/temp.yml
@@ -21,10 +21,7 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v4
 
-      - name: sync dockerhub readme
-        uses: ms-jpq/sync-dockerhub-readme@v1
+      - uses: bemble/sync-readme@v1.0.0
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-          repository: cyclimse/scwtui
-          readme: "./README.md"
+          pass: ${{ secrets.DOCKERHUB_TOKEN }}
+          description: true
