--- a/.github/workflows/temp.yml
+++ b/.github/workflows/temp.yml
@@ -21,7 +21,9 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v4
 
-      - uses: bemble/sync-readme@v1.0.0
+      - uses: peter-evans/dockerhub-description@v3
         with:
-          pass: ${{ secrets.DOCKERHUB_TOKEN }}
-          description: true
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          repository: cyclimse/scwtui
+          short-description: ${{ github.event.repository.description }}
