feat(ci): sync dockerhub overview with github readme (#11)
* feat(ci): sync dockerhub overview with github reade

* fix: missing checkout in tmp

* fix: try another action

* fix: use yet another action

* docs: cleanup README to upload to dockerhub

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,9 @@ on:
     tags:
       - 'v*'
 
+permissions:
+  contents: read
+
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
@@ -36,3 +39,11 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+      
+      - name: Update Docker Hub description
+        uses: peter-evans/dockerhub-description@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          repository: cyclimse/scwtui
+          short-description: ${{ github.event.repository.description }}
