--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -10,12 +10,9 @@ on:
 permissions:
     contents: read
 
-defaults:
-  run:
-    shell: bash
-
 jobs:
-  quality:
+  lint:
+    name: Run linters
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -24,7 +21,7 @@ jobs:
       with:
         go-version: '^1.21'
 
-    - name: golangci-lint
+    - name: Run golangci-lint
       uses: golangci/golangci-lint-action@v3
       with:
         version: v1.55
@@ -39,5 +36,5 @@ jobs:
       with:
         go-version: '^1.21'
 
-    - name: go test
+    - name: Run unit tests
       run: go test -v ./...
